syntax = "proto3";

package search;
option go_package = "./search";

// 搜索服务
service SearchService {
    // 搜索消息
    rpc SearchMessages(SearchMessagesRequest) returns (SearchMessagesResponse);
    
    // 索引消息
    rpc IndexMessage(IndexMessageRequest) returns (CommonResponse);
    
    // 删除消息索引
    rpc DeleteMessageIndex(DeleteMessageIndexRequest) returns (CommonResponse);
}

// 搜索消息请求
message SearchMessagesRequest {
    string keyword = 1;
    int64 user_id = 2;
    int64 conversation_id = 3;
    int32 page = 4;
    int32 page_size = 5;
}

// 搜索消息响应
message SearchMessagesResponse {
    repeated SearchMessageInfo messages = 1;
    int64 total = 2;
}

// 搜索消息信息
message SearchMessageInfo {
    int64 message_id = 1;
    int64 conversation_id = 2;
    int64 sender_id = 3;
    string content = 4;
    string highlight = 5;
    int64 created_at = 6;
}

// 索引消息请求
message IndexMessageRequest {
    int64 message_id = 1;
    int64 conversation_id = 2;
    int64 sender_id = 3;
    string content = 4;
    int64 created_at = 5;
}

// 删除消息索引请求
message DeleteMessageIndexRequest {
    int64 message_id = 1;
}

// 通用响应
message CommonResponse {
    bool success = 1;
    string message = 2;
}
